--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 
 set -sg escape-time 1
 
+set -g default-terminal "screen-256color"
+
 set -g base-index 1
 #setw -g pane-base-index 1
 
@@ -33,6 +35,8 @@ setw -g mode-mouse off
 #set -g mouse-resize-pane on
 #set -g mouse-select-window on
 
+
+set -g history-limit 5000
 
 #enable vim keys for scrolling in copy mode
 setw -g mode-keys vi
