--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 
 set -sg escape-time 1
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 set -g base-index 1
 #setw -g pane-base-index 1
