--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,13 +41,11 @@ set -g history-limit 5000
 #enable vim keys for scrolling in copy mode
 setw -g mode-keys vi
 
-set -g status-fg white
-set -g status-bg black
-setw -g window-status-fg cyan
+setw -g window-status-fg green
 setw -g window-status-bg default
 setw -g window-status-attr dim
 setw -g window-status-current-fg white
-setw -g window-status-current-bg red
+setw -g window-status-current-bg colour93
 setw -g window-status-current-attr bright
 
 set -g pane-border-fg green
@@ -59,12 +57,19 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
-set -g status-utf8 on
-set -g status-interval 15
-set -g status-justify centre
-
 setw -g monitor-activity on
 set -g visual-activity on
+
+#powerline stuff
+set -g status on
+set -g status-fg white
+set -g status-bg black
+set -g status-interval 2
+set -g status-utf8 on
+set -g status-justify "centre"
+set -g status-left-length 50
+set -g status-right-length 80
+set -g status-left "#(~/.tmux/tmuxpowerline/tmux-powerline/powerline.sh left)"
+set -g status-right "#(~/.tmux/tmuxpowerline/tmux-powerline/powerline.sh right)"
+bind C-[ run '~/.tmux/tmuxpowerline/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
+bind C-] run '~/.tmux/tmuxpowerline/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
