--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = http://github.com/tpope/vim-fugitive.git
 [submodule "vim/.vim/bundle/vim-powerline"]
 	path = vim/.vim/bundle/vim-powerline
-	url = http://github.com/Lokaltog/vim-powerline
+	url = http://github.com/Lokaltog/vim-powerline.git
 [submodule "vim/.vim/bundle/vundle"]
 	path = vim/.vim/bundle/vundle
 	url = http://github.com/gmarik/vundle.git
