--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/.vim/bundle/vundle"]
 	path = vim/.vim/bundle/vundle
 	url = http://github.com/gmarik/vundle.git
+[submodule "vim/.vim/vundle.git"]
+	path = vim/.vim/vundle.git
+	url = http://github.com/gmarik/vundle.git
