--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,10 +10,13 @@ set -g base-index 1
 
 bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
 
-bind C-a send-prefix
+#bind C-a send-prefix
 
 bind | split-window -h
 bind - split-window -v
+
+bind > command-prompt -p "send pane to:"   "join-pane -t '%%'"
+bind < command-prompt -p "join pane from:"   "join-pane -s '%%'"
 
 bind h select-pane -L
 bind j select-pane -D
